php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #41061 "visibility error" in ReflectionFunction::export()
Submitted: 2007-04-12 12:20 UTC Modified: 2007-04-12 18:41 UTC
From: tony2001@php.net Assigned: johannes (profile)
Status: Closed Package: Class/Object related
PHP Version: 5CVS-2007-04-12 (CVS) OS: Linux
Private report: No CVE-ID: None
 [2007-04-12 12:20 UTC] tony2001@php.net
Description:
------------
ReflectionFunction() incorrectly presumes function flags can be only private, protected or public.

Reproduce code:
---------------
function foo(){} 
$f = new ReflectionFunction("foo"); 
$f->export("foo");

Expected result:
----------------
Function [ <user> function foo ] {
  @@ Command line code 1 - 1
}


Actual result:
--------------
Function [ <user> <visibility error> function foo ] {
  @@ Command line code 1 - 1
}


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2007-04-12 18:41 UTC] johannes@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sat Sep 26 05:00:02 2026 UTC