- Fix bug #41061 ("visibility error" in ReflectionFunction::export())